--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,11 +6,15 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Recipes <span class="sr-only">(current)</span></a>
+      <li class="nav-item" [className]="featureLoad=='recipe' ? 'active' : ''">
+        <a class="nav-link" (click)="onSelect('recipe')" href="#">Recipes  
+          <!-- <span *ngIf="featureLoad === 'recipe'" class="sr-only">(current)</span> -->
+        </a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Shopping List</a>
+      <li class="nav-item" [className]="featureLoad=='shopping-list' ? 'active' : ''">
+        <a class="nav-link" (click)="onSelect('shopping-list')" href="#">Shopping List
+            <!-- <span *ngIf="featureLoad === 'shopping-list'" class="sr-only">(current)</span> -->
+        </a>
       </li>
     </ul>
     <ul class="navbar-nav float-right">
