--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -6,7 +6,11 @@
 <hr>
 <div class="row">
   <div class="col-md-12">
-    <app-recipe-item *ngFor="let recipe of recipes"  [recipeItem]="recipe"></app-recipe-item>
+    <app-recipe-item 
+    *ngFor="let recipe of recipes"  
+    [recipeItem]="recipe" 
+    (recipeSelected)="OnRecipeSelected(recipe)"
+    ></app-recipe-item>
   </div>  
 </div>
 
